--- a/app/src/main/res/layout/fragment_layout_call.xml
+++ b/app/src/main/res/layout/fragment_layout_call.xml
@@ -53,6 +53,6 @@
         android:id="@+id/callLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Call Log" />
+        android:text="" />
 
 </LinearLayout>
