--- a/app/src/main/res/layout/fragment_layout_call.xml
+++ b/app/src/main/res/layout/fragment_layout_call.xml
@@ -4,55 +4,57 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="80dp"-->
-        <!--android:orientation="horizontal">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
 
-        <!--<ImageView-->
-            <!--android:id="@+id/pic"-->
-            <!--android:layout_width="70dp"-->
-            <!--android:layout_height="70dp"-->
-            <!--android:layout_margin="10dp"/>-->
+        <ImageView
+            android:id="@+id/display"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_margin="10dp"/>
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="80dp"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="vertical">
 
-            <!--<TextView-->
-                <!--android:id="@+id/name"-->
-                <!--android:hint="name"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:gravity="bottom"/>-->
+            <TextView
+                android:id="@+id/name"
+                android:hint="name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="bottom"/>
 
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="40dp">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
 
-                <!--<ImageView-->
-                    <!--android:id="@+id/call_status"-->
-                    <!--android:layout_width="20dp"-->
-                    <!--android:layout_height="20dp"-->
-                    <!--android:layout_gravity="bottom"/>-->
+                <ImageView
+                    android:id="@+id/call_status"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="bottom"/>
 
-                <!--<TextView-->
-                    <!--android:id="@+id/time"-->
-                    <!--android:hint="Date and Time"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="40dp"-->
-                    <!--android:gravity="bottom"/>-->
+                <TextView
+                    android:id="@+id/time"
+                    android:hint="Date and Time"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="bottom"/>
 
-            <!--</LinearLayout>-->
-        <!--</LinearLayout>-->
-    <!--</LinearLayout>-->
-
-    <TextView
-        android:id="@+id/callLog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="" />
-
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+<!--<ScrollView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content">-->
+    <!--<TextView-->
+        <!--android:id="@+id/callLog"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="" />-->
+<!--</ScrollView>-->
 </LinearLayout>
