--- a/app/src/main/res/layout/fragment_layout_call.xml
+++ b/app/src/main/res/layout/fragment_layout_call.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#ffffff">
 
         <ImageView
             android:id="@+id/display"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"/>
 
         <LinearLayout
@@ -25,7 +26,8 @@
                 android:hint="name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="bottom"/>
+                android:gravity="bottom"
+                android:textColor="#000000"/>
 
 
             <LinearLayout
@@ -42,8 +44,9 @@
                     android:id="@+id/time"
                     android:hint="Date and Time"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:gravity="bottom"/>
+                    android:layout_height="20dp"
+                    android:gravity="bottom"
+                    android:textColor="#000000"/>
 
             </LinearLayout>
         </LinearLayout>
